--- a/_sass/layout/_sectionLayout.scss
+++ b/_sass/layout/_sectionLayout.scss
@@ -15,6 +15,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    align-content: flex-start;
     column-gap: var(--_section-col-gap);
     row-gap: var(--_section-row-gap);
 
